<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medipro.Fragment.UploadPrescription"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@drawable/ad_common"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow"
                android:padding="@dimen/very_small_text"/>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="right">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/small_search"-->
                    <!--android:padding="@dimen/very_small_text"/>-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/smal_cart"-->
                    <!--android:padding="@dimen/very_small_text"/>-->
            <!--</LinearLayout>-->
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="UPLOAD YOUR\nPRESCRIPTION"
            android:textColor="@color/white"
            android:textSize="@dimen/xlarge_text"
            android:layout_marginLeft="@dimen/large_text"
            android:layout_marginTop="@dimen/smaller_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
<GridView
    android:id="@+id/gv_uploaded_documents"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:numColumns="3"
    android:layout_margin="@dimen/very_small_text">

</GridView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mini_text">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/prescription_camera"
            android:layout_gravity="center"
            android:text="@string/upload_camera"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text"
            android:layout_marginRight="1dp"
            android:gravity="center"
            android:drawablePadding="@dimen/very_small_text"
            android:paddingBottom="@dimen/mini_text"
            android:paddingTop="@dimen/small_text"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/prescription_gallery"
            android:layout_gravity="center"
            android:text="@string/upload_gallery"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:drawablePadding="@dimen/very_small_text"
            android:paddingBottom="@dimen/mini_text"
            android:paddingTop="@dimen/small_text"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/tv_preload"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/prescription_preload"
            android:layout_gravity="center"
            android:text="@string/upload_preload"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:drawablePadding="@dimen/very_small_text"
            android:paddingBottom="@dimen/mini_text"
            android:paddingTop="@dimen/small_text"
            android:background="@color/white"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_continue_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/upload_continue"
        android:layout_gravity="center"
        android:textSize="@dimen/small_text"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/upload_background_color"
        android:textColor="@color/white"/>

</LinearLayout>
</LinearLayout>